--- a/uniforminvoice/ios/Runner/Info.plist
+++ b/uniforminvoice/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(APP_DISPLAY_NAME) needs photo library access to scan barcodes</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(APP_DISPLAY_NAME) needs camera access to scan barcodes</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
