--- a/flutter_database/pubspec.yaml
+++ b/flutter_database/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.2.4+1
+  sqflite: ^2.2.5
   version: ^3.0.2
   path_provider: ^2.0.12
   
