--- a/flutter_zxing/pubspec.yaml
+++ b/flutter_zxing/pubspec.yaml
@@ -10,19 +10,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.0.2
-  ffi: ^2.0.1
-  permission_handler: ^10.2.0
-  image: ^4.0.15
-  camera: ^0.10.3+2
-  image_picker: ^0.8.6+4
+  plugin_platform_interface: ^2.1.8
+  ffi: ^2.1.0
+  permission_handler: ^11.2.0
+  camera: ^0.10.5+9
+  image: ^4.1.4
+  image_picker: ^1.0.7
   equatable: ^2.0.5
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
