--- a/uniforminvoice/pubspec.yaml
+++ b/uniforminvoice/pubspec.yaml
@@ -30,13 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
   equatable: ^2.0.5
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
   version: ^3.0.2
-  http: ^0.13.5
-  html: ^0.15.1
-  font_awesome_flutter: ^10.3.0
+  http: ^1.2.0
+  html: ^0.15.4
+  font_awesome_flutter: ^10.7.0
   fluid_bottom_nav_bar: ^1.4.0
-  fluttertoast: ^8.1.2
+  fluttertoast: ^8.2.4
+  google_mlkit_text_recognition: ^0.11.0
   flutter_zxing:
     path: '../flutter_zxing'
   flutter_database:
@@ -44,7 +45,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -55,8 +56,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-  # flutter_launcher_icons: ^0.11.0
+  flutter_lints: ^3.0.1
+  # flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
